# ellalgo-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  IFLOW.md  README.md  README_8md.html  _r_e_a_d_m_e_8md.html  a.out  about.html  about_8dox.html  annotated.html  arr_8hpp.html  arr_8hpp__incl.map  arr_8hpp__incl.md5  arr_8hpp_source.html  bsearch_ai.cpp  classArr-members.html  classArr.html  classBSearchAdaptor-members.html  classBSearchAdaptor.html  classEll-members.html  classEll.html  classEllCalc-members.html  classEllCalc.html  classEllCalcCore-members.html  classEllCalcCore.html  classEllCalcQ.html  classEllCalc__coll__graph.map  classEllCalc__coll__graph.md5  classEllCore-members.html  classEllCore.html  classEllStable-members.html  classEllStable.html  classLDLTMgr-members.html  classLDLTMgr.html  classLmi0Oracle-members.html  classLmi0Oracle.html  classLmi0Oracle__coll__graph.map  classLmi0Oracle__coll__graph.md5  (+255 more)
.github/workflows/: benchmark.yml  documentation.yaml  install.yml  macos.yml  standalone.bak  standalone.yml  style.bak  style.yml  test.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
bench/: BM_ell.cpp  BM_lmi.cpp  BM_lowpass.cpp  BM_lowpass.tpp  BM_stable.cpp  CMakeLists.txt
cmake/: specific.cmake
documentation/: CMakeLists.txt  Doxyfile  conf.py
experiment/: power_iteration.cpp
include/ell/: greeter.h
include/ellalgo/: arr.hpp  conjugate_gradient.hpp  conjugate_gradient2.hpp  cut_config.hpp  cutting_plane.hpp  ell.hpp  ell1d.hpp  ell_assert.hpp  ell_calc.hpp  ell_calc_core.hpp  ell_concepts.hpp  ell_concepts.tpp  ell_config.hpp  ell_core.hpp  ell_matrix.hpp  ell_stable.hpp  greeter.h  half_nonnegative.hpp  linear_algebra.hpp  logger.hpp  utility.hpp
include/ellalgo/oracles/: ldlt_ext.hpp  ldlt_mgr.hpp  lmi0_oracle.hpp  lmi_old_oracle.hpp  lmi_oracle.hpp  lowpass_oracle.hpp  lowpass_oracle.tpp  profit_oracle.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  (+47 more)
source/: ell.cpp  ell.tpp  ell1d.cpp  ell_calc.cpp  ell_calc_core.cpp  ell_core.cpp  ell_stable.cpp  ell_stable.tpp  greeter.cpp  greeter.tpp  ldlt_ext.cpp  ldlt_mgr.cpp  lmi0_oracle.cpp  lmi_old_oracle.cpp  lmi_oracle.cpp  logger.cpp  lowpass_oracle.cpp  lowpass_oracle.tpp  profit_oracle.cpp  qmi_oracle.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  greeter.old  greeter.tpp  test_arr.cpp  test_calc.cpp  test_calc_core.cpp  test_conjugate_gradient.cpp  test_conjugate_gradient2.cpp  test_core.cpp  test_cutting_plane.cpp  test_ell.cpp  test_ell_matrix.cpp  test_ell_stable.cpp  test_example1.cpp  test_example2.cpp  test_example3.cpp  test_ldlt.cpp  test_lmi.cpp  test_lmi_old.cpp  test_logger.cpp  test_lowpass.cpp  test_lowpass.tpp  test_profit.cpp  test_quasicvx.cpp  test_rapidcheck.cpp  test_stress.cpp
test_installed/: CMakeLists.txt
